--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "esbuild": "^0.24.0",
     "express": "^4.21.0",
-    "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
     "normalize.css": "^8.0.1",
@@ -42,7 +42,7 @@
     "globals": "^15.9.0",
     "nodemon": "^3.1.7",
     "sass-embedded": "^1.78.0",
-    "vite": "^5.4.1",
+    "vite": "^5.4.8",
     "vite-plugin-static-copy": "^1.0.6"
   }
 }
