--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "start": "NODE_ENV=production node dist/server.js"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "esbuild": "^0.24.0",
     "express": "^4.21.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
+    "nodemailer": "^6.9.15",
+    "nodemailer-mailgun-transport": "^2.1.5",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-query": "^3.39.3",
     "react-responsive": "^10.0.0",
     "react-responsive-masonry": "^2.3.0",
