--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "esbuild": "^0.24.0",
     "express": "^4.21.0",
+    "http-proxy-middleware": "^3.0.3",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
     "nodemailer": "^6.9.15",
